k8s/streaming-sample-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-server-cluster-ip-service
spec:
  selector:
    app: streaming-server
  ports:
    - port: 9080
      targetPort: 9080
